# book-series-tracker

./: .gitignore  .prettierignore  Cargo.toml  LICENSE  README.md  Rocket.toml  autoformat.sh  config.toml
.cargo/: config.toml
bstmacros/: Cargo.toml  README
bstmacros/src/: lib.rs
db/: delta.1.sql  delta.2.sql  delta.3.sql  delta.4.sql  delta.5.sql  delta.6.sql  delta.7.sql  init.sql
javascript/: tsconfig.json  webpack.config.js
javascript/src/: App.tsx  Books.tsx  Jobs.tsx  Series.tsx
js/: eslint.config.mjs  package-lock.json  package.json  tsconfig.json  webpack.config.js
js/src/: App.tsx  AppSettings.tsx  BookList.tsx  Books.tsx  BooksPage.tsx  BooksSection.tsx  FetchHelper.tsx  Job.tsx  JobList.tsx  Jobs.tsx  JobsPage.tsx  JobsTable.tsx  LoginSection.tsx  Navigation.tsx  Series.tsx  SeriesList.tsx  SeriesPage.tsx  SeriesSection.tsx  SeriesTable.tsx  SettingsProvider.tsx  UI.tsx  User.tsx  common.tsx
sanitizer/: Cargo.toml  README.md
sanitizer/src/: main.rs
src/: api_routes.rs  books.rs  calendar.rs  common.rs  database.rs  gatekeeper.rs  genjs.rs  guards.rs  job_processor.rs  job_server.rs  js.rs  lib.rs  login.rs  login_routes.rs  main.rs  reads.rs  response.rs  routes.rs  series.rs  subscriptions.rs  user.rs
src/controllers/: books.rs  index.rs  jobs.rs  login.rs  mod.rs  series.rs
src/scraper/: book.rs  common.rs  job.rs  mod.rs  processor.rs  scraper.rs  series.rs  server.rs
www/: index.html  login.html  testpage.html
www/static/: login.css  style.css
www/templates/: index.html.tera  layout.html.tera  login.html.tera
