[package]
name = "bstserver"
version = "0.1.0"
edition = "2021"
default-run="bstserver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"

rocket = { version = "0.5.1", features = ["json", "secrets"] }
serde = "1.0.215"

anyhow = { version = "1.0" }
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1.20.0", features = ["rt", "macros"]}

icalendar = "0.16.9"
chrono = "0.4.38"

thirtyfour = "0.34.0"
clap = { version = "4.5.21", features = ["derive"] }
serde_json = "1.0.133"
bstmacros = { version = "0.1.0", path = "./bstmacros" }
regex = "1.11.1"
libsodium-sys-stable = "1.22.3"
rocket_dyn_templates = { version = "0.2.0", features = [ "tera" ] }
